# Otus_Matrix

./: .gitmodules  CMakeLists.txt  README.md  lib_matrix.h  main.cpp  test_lib.cpp
.github/workflows/: matrix.yml
.gitignore/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  Matrix  TEST_lib  cmake_install.cmake
